<resources>
    <string name="app_name">KyuRX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="welcome_to_kyurx">Welcome to KyuRX</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register_signup">Register or Sign Up</string>
    <string name="register">Register</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="dr_name">Dr. Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="specialist">Specialist</string>
    <string name="user_name">User Name</string>
    <string name="manage_prescription">Manage Prescription</string>
    <string name="manage_doctor">Manage Doctor</string>
    <string name="manage_patient">Manage Patient</string>
    <string name="manage_user">Manage User</string>
    <string name="no_patient_available">No Patient Available</string>
    <string name="add_patient">Add Patient</string>
    <string name="patient_name">Patient Name</string>
    <string name="email_id">Email Id</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="medicine_count">Medicine Count</string>
    <string name="select_doctor">Select Doctor:</string>
    <string name="select_patient">Select Patient:</string>
    <string name="add_prescriptions">Add Prescriptions</string>
    <string name="prescription_details">Prescription Details:</string>
    <string name="no_medicine_added">No Medicine Added</string>
    <string name="send_to_kyurx">Send to KyuRX</string>
    <string name="choose_doctor">Choose Doctor</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="quantity">Quantity</string>
    <string name="dosage_instructions">Dosage Instructions</string>
    <string name="agreement">Agreement</string>
    <string name="agreement_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nibh venenatis cras sed felis eget velit aliquet. Vitae auctor eu augue ut. Faucibus in ornare quam viverra orci sagittis eu volutpat odio. Viverra justo nec ultrices dui. Quis varius quam quisque id. Erat pellentesque adipiscing commodo elit at. In ante metus dictum at tempor commodo ullamcorper a. Egestas sed sed risus pretium quam vulputate dignissim suspendisse. A arcu cursus vitae congue mauris rhoncus. Quam adipiscing vitae proin sagittis nisl. Non odio euismod lacinia at quis risus sed. Vitae ultricies leo integer malesuada nunc vel. Ut tristique et egestas quis ipsum. Nibh tellus molestie nunc non blandit massa enim nec. Nunc sed id semper risus in hendrerit gravida rutrum. Viverra aliquet eget sit amet tellus. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras.

\n \n Felis eget velit aliquet sagittis id consectetur purus. Lectus magna fringilla urna porttitor rhoncus dolor. Condimentum id venenatis a condimentum vitae sapien. Aenean euismod elementum nisi quis eleifend quam. Fringilla ut morbi tincidunt augue. Nunc sed augue lacus viverra. Quam pellentesque nec nam aliquam sem. Volutpat sed cras ornare arcu dui vivamus. Et ligula ullamcorper malesuada proin libero. Blandit aliquam etiam erat velit scelerisque in. Laoreet id donec ultrices tincidunt arcu non sodales neque sodales. Viverra ipsum nunc aliquet bibendum enim facilisis gravida neque convallis. Egestas integer eget aliquet nibh praesent tristique magna.

</string>
    <string name="i_agree_to_the_terms_of_service">I agree to the terms of service</string>
    <string name="account_creation">Account Creation</string>
    <string name="text_allowed">Text Allowed</string>
    <string name="upload_id_proof">Upload ID Proof:</string>
    <string name="insurance">Insurance:</string>
    <string name="doctor_portal">Doctor Portal</string>
    <string name="patient_portal">Patient Portal</string>
    <string name="title_activity_patient_main">PatientMain</string>
    <string name="medicine_status">Medicine Status</string>
    <string name="pharmacy_preference">Pharmacy Preference</string>
    <string name="dashboard">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auto_bid">Auto Bid</string>
    <string name="selsoft_pharmacy">Selsoft Pharmacy</string>
    <string name="address">Address:</string>
    <string name="auto_bit_details">Auto Bit Details</string>
    <string name="confirm">Confirm</string>
    <string name="preference">Preference</string>
    <string name="check_status">Check Status</string>
    <string name="total_amount">Total Amount</string>
    <string name="confirm_">CONFIRM</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="description">Lowering the cost of prescription medicine</string>
    <string name="patient_details">Patient Details:</string>
</resources>
