<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_prescription">

    <fragment
        android:id="@+id/nav_prescription"
        android:name="com.selsoft.kyurx.ui.main.prescription.PrescriptionFragment"
        android:label="@string/manage_prescription"
        tools:layout="@layout/fragment_prescription" >
    </fragment>

    <fragment
        android:id="@+id/nav_doctor"
        android:name="com.selsoft.kyurx.ui.main.doctor.DoctorFragment"
        android:label="@string/manage_doctor"
        tools:layout="@layout/fragment_doctor" />

    <fragment
        android:id="@+id/nav_patient"
        android:name="com.selsoft.kyurx.ui.main.patient.PatientFragment"
        android:label="@string/manage_patient"
        tools:layout="@layout/fragment_patient" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.selsoft.kyurx.ui.main.user.UserFragment"
        android:label="@string/manage_user"
        tools:layout="@layout/fragment_user" />
</navigation>