<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/add_doctor"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/activity_margin_half"
        android:background="@color/colorPrimary" />

    <EditText
        android:id="@+id/dr_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_margin_half"
        android:layout_marginLeft="@dimen/activity_margin_half"
        android:hint="@string/dr_name"
        android:textSize="@dimen/_15sdp"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/dr_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_margin_half"
        android:layout_marginLeft="@dimen/activity_margin_half"
        android:hint="@string/email"
        android:textSize="@dimen/_15sdp"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/dr_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_margin_half"
        android:layout_marginLeft="@dimen/activity_margin_half"
        android:hint="@string/phone_number"
        android:textSize="@dimen/_15sdp"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center|right"
        android:layout_marginTop="@dimen/activity_margin_half"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/save"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>