<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/agreement"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/activity_margin_half"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/agreement_text"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13sdp"
            tools:ignore="SpUsage" />

        <CheckBox
            android:id="@+id/cb_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/i_agree_to_the_terms_of_service"
            android:textSize="@dimen/_14sdp"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/btn_bg_primary"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/h5"
            android:textStyle="bold"
            tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />

    </LinearLayout>

</ScrollView>