<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to_kyurx"
        android:textStyle="bold"
        android:textSize="@dimen/_35sdp"
        android:textColor="@color/white"
        tools:ignore="ContentDescription,SpUsage" />

    <LinearLayout
        android:id="@+id/ly_email"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@id/txt_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/email_bg"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_account_circle"
            android:tint="@color/colorPrimary"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_margin_half"
            android:layout_marginLeft="@dimen/activity_margin_half"
            android:layout_marginEnd="@dimen/activity_margin_half"
            android:layout_marginRight="@dimen/activity_margin_half"
            android:background="@android:color/transparent"
            android:hint="Email or UserName"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:textSize="@dimen/primary_title_size"
            tools:ignore="HardcodedText,SpUsage" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_password"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@id/ly_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/email_bg"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_https"
            android:tint="@color/colorPrimary"
            tools:ignore="ContentDescription" />

        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_margin_half"
            android:layout_marginLeft="@dimen/activity_margin_half"
            android:layout_marginEnd="@dimen/activity_margin_half"
            android:layout_marginRight="@dimen/activity_margin_half"
            android:background="@android:color/transparent"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:textSize="@dimen/primary_title_size"
            app:additionalTouchTargetSize="@dimen/_50sdp"
            app:drawable_hide="@drawable/ic_visibility_off_black_24dp"
            app:drawable_show="@drawable/ic_visibility_black_24dp"
            app:tint_color="@color/secondary_text"
            tools:ignore="HardcodedText,SpUsage" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@id/ly_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/btn_bg_white"
        android:elevation="@dimen/_5sdp"
        android:gravity="center"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="@dimen/h5"
        android:textStyle="bold"
        tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:weightSum="2">

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/forget_password"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_title_size"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/register_signup"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_title_size"
            tools:ignore="RtlHardcoded,SpUsage" />

    </LinearLayout>





</RelativeLayout>